--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.7.7",
-    "less": "^4.2.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-code-copy": "^0.1.2",
+    "markdown-it-highlightjs": "^4.1.0",
+    "pinia": "^2.1.7",
     "vue": "^3.4.31",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "sass": "^1.77.8",
+    "vite": "^5.3.4",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "axios": "^1.7.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "sass": "^1.77.8",
-    "vite": "^5.3.4"
+    "mockjs": "^1.1.0"
   }
 }
