--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
-    "mockjs": "^1.1.0"
+    "mockjs": "^1.1.0",
+    "vite-plugin-vitepress": "^0.0.1-alpha.1"
   }
 }
